# vector-topic-modeling

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci-stability.yml  ci.yml  codeql.yml  dependency-review-runtime-monitor.yml  dependency-review.yml  dependency-submission.yml  pr-branch-guard.yml  publish.yml  release.yml  scorecard.yml  strix.yml  trivy.yml
docs/: user-manual-general-ko.md  user-manual-ko.md  user-manual.md
docs/agents/: README.md
docs/coderabbit/: review-commands.md
docs/engineering/: acceptance-criteria.md  harness-engineering.md
docs/maintainers/: releasing.md
docs/operations/: deploy-runbook.md
docs/plans/: 2026-03-24-release-gate-hardening.md  2026-03-24-repository-polish-design.md  2026-03-24-repository-polish-implementation.md  2026-03-24-topic-modeling-extraction.md  2026-03-25-canonical-verification-alignment-design.md  (+5 more)
examples/: basic_in_memory_provider.py  cli_openai_compat.sh  ingestion_config_db_columns.json  sample_db_rows.jsonl  sample_queries.jsonl  sample_test.jsonl
scripts/: docstring_coverage.py  smoke_installed_cli.py
tests/: fuzz_sanitize.py  test_cli.py  test_clustering.py  test_contributor_doc_policy_alignment.py  test_coverage_clustering.py  test_coverage_gap.py  test_coverage_openai.py  test_coverage_remaining.py  test_dependency_review_action_runtime_check.py  test_dependency_review_warning_gate.py  test_dependency_security_governance.py  test_distributed.py  test_docs_ci_policy_alignment.py  test_docs_release_gate_alignment.py  test_docstring_coverage.py  test_evaluation.py  test_ingestion.py  test_main.py  test_pipeline.py  test_pr_check_gate_classifier.py  test_provider.py  test_public_wording_sanitization.py  test_pyproject_license_metadata.py  test_sanitize.py  test_security_advisories_governance.py  test_service.py  test_sessioning.py  test_smoke_installed_cli.py  test_text.py
(+23 files in other folders)
