[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vector-topic-modeling"
version = "0.1.0"
description = "Standalone embedding-based topic modeling for vector analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Seongho Bae" }
]
keywords = ["topic-modeling", "embeddings", "clustering", "recommendation", "classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "pytest-cov>=7.1.0"
]

[project.scripts]
vector-topic-modeling = "vector_topic_modeling.cli:main"

[project.urls]
Homepage = "https://github.com/seonghobae/vector-topic-modeling"
Repository = "https://github.com/seonghobae/vector-topic-modeling"
Issues = "https://github.com/seonghobae/vector-topic-modeling/issues"
Changelog = "https://github.com/seonghobae/vector-topic-modeling/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_topic_modeling"]

[tool.hatch.build.targets.sdist]
include = [
  ".github/workflows/ci.yml",
  ".github/workflows/publish.yml",
  ".github/release.yml",
  ".github/ISSUE_TEMPLATE/*.yml",
  ".github/PULL_REQUEST_TEMPLATE.md",
  ".github/CODEOWNERS",
  ".gitignore",
  "AGENTS.md",
  "ARCHITECTURE.md",
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "README.md",
  "SECURITY.md",
  "SUPPORT.md",
  "docs/**/*.md",
  "examples/**/*",
  "pyproject.toml",
  "scripts/**/*.py",
  "src/vector_topic_modeling/**/*.py",
  "tests/**/*.py",
  "uv.lock",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=vector_topic_modeling --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.mypy]
python_version = "3.11"
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

